Security: Remove real credentials from .env.example template

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,6 @@
 # Generate Gmail App Password: https://myaccount.google.com/apppasswords
 SMTP_SERVER=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USERNAME=rajkumaratsvnit@gmail.com
-SMTP_PASSWORD=vokb utbb vwty plqx
-SMTP_FROM_EMAIL=rajkumaratsvnit@gmail.com
+SMTP_USERNAME=your_email@gmail.com
+SMTP_PASSWORD=your_app_password_here
+SMTP_FROM_EMAIL=your_email@gmail.com
